Fix project card spacing

--- a/sushi/src/components/pages/Projects.css
+++ b/sushi/src/components/pages/Projects.css
@@ -24,7 +24,7 @@
 }
 
 .project-title {
-  margin: -1% 0; 
+  margin: 0 0 -10px 0; 
 }
 
 .project-picture {
@@ -48,4 +48,5 @@
 .pills-container {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 16px;
 }
