--- a/sushi/src/styles/Main.css
+++ b/sushi/src/styles/Main.css
@@ -51,8 +51,7 @@ hr {
 
 .pill {
   border-radius: 4px;
-  margin-right: 4px;
-  margin-bottom: 4px;
+  margin: 0 4px 4px 0;
   padding: 1px 4px;
 }
 
